[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "soroban"
dynamic = ["version"]
description = "API and CLI for Soroban contracts in Python"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Pamphile Roy" },
]
maintainers = [
    { name = "Soroban API/CLI contributors" },
]

keywords = [
    "stellar-sdk",
    "stellar",
    "stellar.org",
    "lumens",
    "xlm",
    "blockchain",
    "distributed exchange",
    "cryptocurrency",
    "dex",
    "horizon",
    "sdex",
    "trading",
    "soroban",
    "soroban-rpc"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "stellar-sdk",
    "pydantic",
    "pydantic-settings",
    "tomli_w",
]

[project.optional-dependencies]
cli = [
    "typer[all]",
]

tests = [
    "pytest",
    "pytest-cov",
]

dev = [
    "soroban[cli,tests]",
    "pre-commit",
    "hatch",
]

[project.scripts]
soroban = "soroban.cli:app"

[project.urls]
homepage = "https://github.com/tupui/soroban-cli-python"
documentation = "https://github.com/tupui/soroban-cli-python"
source = "https://github.com/tupui/soroban-cli-python"

[tool.hatch]
version.source = "vcs"
build.targets.wheel.packages = ["src/soroban"]
build.targets.sdist.exclude = [
  ".github",
  "docs",
  "tests",
  "*.rst",
  "*.yml",
  ".*",
]

[tool.pytest.ini_options]
addopts = "--durations 10"
testpaths = [
    "tests",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403", "F405"]
